--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "chronotype-vscode-theme",
     "displayName": "Chronotype Theme",
-    "description": "A custom theme for anytime development.",
-    "version": "0.3.1",
+    "description": "Custom VSCode themes for anytime development.",
+    "version": "0.4.0",
     "publisher": "cr-jr",
     "license": "MIT",
     "engines": {
