--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "chronotype-vscode-theme",
-    "displayName": "Chronotype Theme",
-    "description": "Custom VSCode themes for anytime development.",
-    "version": "0.5.0",
+    "name": "chronotype-vscode-themes",
+    "displayName": "Chronotype Themes",
+    "description": "Custom VSCode themes for pleasant, productive programming around the clock.",
+    "version": "0.6.0",
     "publisher": "cr-jr",
     "license": "MIT",
     "engines": {
@@ -20,9 +20,19 @@
                 "path": "./themes/chronotype-morning.color-theme.json"
             },
             {
+                "label": "Chronotype: Midday",
+                "uiTheme": "vs",
+                "path": "./themes/chronotype-midday.color-theme.json"
+            },
+            {
                 "label": "Chronotype: Evening",
                 "uiTheme": "vs-dark",
                 "path": "./themes/chronotype-evening.color-theme.json"
+            },
+            {
+                "label": "Chronotype: Midnight",
+                "uiTheme": "vs-dark",
+                "path": "./themes/chronotype-midnight.color-theme.json"
             }
         ]
     }
