--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "author": "Chatman R. Jr <crjr.code@gmail.com>",
     "displayName": "Chronotype Themes",
     "description": "Custom VSCode themes for pleasant, productive programming around the clock.",
-    "version": "0.6.2",
+    "version": "0.6.3",
     "publisher": "cr-jr",
     "repository": {
       "type": "git",
@@ -19,6 +19,12 @@
     },
     "categories": [
         "Themes"
+    ],
+    "keywords": [
+      "themes",
+      "chronotype",
+      "minimal",
+      "pleasant"
     ],
     "icon": "icon.png",
     "galleryBanner": {
